--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@
 
 <!-- Scripts: Mapbox MUST be before app.js -->
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-<script src="config.js"></script>
+<script>
+  // Replace with your Mapbox token
+  const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Ryb21zdXJnZSIsImEiOiJjbG9oZ2V4c3YwMDF0M2VwZzJ6dG9jIn0.5n8sK8qjHkLhXkKp7l7jQ";
+</script>
 <script src="app.js"></script>
 </body>
 </html>
