--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <script>
   // Replace with your Mapbox token
-  const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Ryb21zdXJnZSIsImEiOiJjbG9oZ2V4c3YwMDF0M2VwZzJ6dG9jIn0.5n8sK8qjHkLhXkKp7l7jQ";
+  const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Rvcm0tc3VyZ2UiLCJhIjoiY21scjFvMWZwMDcwODNmcTJnNmdncXQwZSJ9.aHGseHd0HYxPUem0FEQHew";
 </script>
 <script src="app.js"></script>
 </body>
