--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <script>
   // Replace with your Mapbox token
-  const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Rvcm0tc3VyZ2UiLCJhIjoiY21scjFvMWZwMDcwODNmcTJnNmdncXQwZSJ9.aHGseHd0HYxPUem0FEQHew";
+  const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Rvcm0tc3VyZ2UiLCJhIjoiY21scmM2Y3N3MDEzYjNmczViemZueTZuMSJ9.yHlnNztU7CgMaXUNuCzCrg";
 </script>
 <script src="app.js"></script>
 </body>
