Added mapbox token

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <button class="sc-submit" id="registerBtn">Create Account</button>
           <div class="sc-err" id="regErr"></div>
         </div>
-        <div class="sc-note">Your credentials are stored locally and never sent to any server.<br>Storm Central posts are shared publicly.</div>
+        <div class="sc-note"> credentials are stored locally and never sent to any server.<br>Storm Central posts are shared publicly.</div>
       </div>
       <!-- Feed (shown when logged in) -->
       <div id="scFeed" style="display:none">
@@ -387,7 +387,7 @@
 <div class="loader" id="loader"><div class="spin"></div><div class="load-txt">Loading...</div></div>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-<script src="token.js"></script>
+<script>const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Rvcm0tc3VyZ2UiLCJhIjoiY21scmM2Y3N3MDEzYjNmczViemZueTZuMSJ9.yHlnNztU7CgMaXUNuCzCrg";</script>
 <script src="app.js"></script>
 </body>
-</html>
+</html>Your
