--- a/public/index.html
+++ b/public/index.html
@@ -370,12 +370,13 @@
       <div class="s-sec">
         <div class="s-sec-title">About</div>
         <div class="about-box">
-          <div>Storm Surge Weather <strong>v10.0</strong></div>
+          <div>Storm Surge Weather <strong>v10.1</strong></div>
           <div>Radar — RainViewer API</div>
-          <div>Forecast — Open-Meteo (free)</div>
+          <div>Forecast — WeatherNext 2 / tomorrow.io</div>
           <div>Alerts + NWS Reports — weather.gov</div>
           <div>Maps — Mapbox GL JS</div>
           <div>Traffic — 511 State Systems</div>
+          <div>Storage — Google Cloud Storage</div>
         </div>
       </div>
 
@@ -388,7 +389,7 @@
 <div class="loader" id="loader"><div class="spin"></div><div class="load-txt">Loading...</div></div>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-<script>const MAPBOX_TOKEN = "pk.eyJ1Ijoic3Rvcm0tc3VyZ2UiLCJhIjoiY21scmM2Y3N3MDEzYjNmczViemZueTZuMSJ9.yHlnNztU7CgMaXUNuCzCrg";</script>
+<script src="token.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
