--- a/public/index.html
+++ b/public/index.html
@@ -370,9 +370,9 @@
       <div class="s-sec">
         <div class="s-sec-title">About</div>
         <div class="about-box">
-          <div>Storm Surge Weather <strong>v10.1</strong></div>
-          <div>Radar — RainViewer API</div>
-          <div>Forecast — WeatherNext 2 / tomorrow.io</div>
+          <div>Storm Surge Weather <strong>v10.2</strong></div>
+          <div>Radar — tomorrow.io</div>
+          <div>Forecast — WeatherNext 2 / Open-Meteo</div>
           <div>Alerts + NWS Reports — weather.gov</div>
           <div>Maps — Mapbox GL JS</div>
           <div>Traffic — 511 State Systems</div>
