Fixed Some issues

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,10 @@
     <button class="lb" data-layer="wind">💨 Wind</button>
     <button class="lb" data-layer="clouds">☁ Clouds</button>
     <button class="lb" data-layer="pressure">📊 Pressure</button>
+    <div class="lb-divider"></div>
+    <button class="lb lb-overlay" data-overlay="cloud_cover" title="tomorrow.io clouds overlay">☁ Clouds+</button>
+    <button class="lb lb-overlay" data-overlay="temperature" title="tomorrow.io temperature overlay">🌡 Temp+</button>
+    <button class="lb lb-overlay" data-overlay="wind_speed" title="tomorrow.io wind overlay">💨 Wind+</button>
     <div class="lb-spacer"></div>
     <button class="lb style-btn" id="styleBtn">◑ Map Style</button>
   </div>
