Polish UI styling and wire camera/radar data flows

--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
         <button id="camDockClose" aria-label="Close camera panel">✕</button>
       </div>
       <iframe id="camDockFrame" title="Hazcams Camera" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <div class="cam-dock-note">If this camera is blocked from embedding, use “Open in new tab”.</div>
+      <div class="cam-dock-note">If this camera is blocked from embedding, use <a id="camDockOpen" href="https://hazcams.com/" target="_blank" rel="noopener noreferrer">Open in new tab</a>.</div>
     </div>
 
   </div>
