Add click-to-focus NEXRAD composite mode to reduce radar lag

--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,7 @@
       <input type="range" id="tRange" min="0" max="0" value="0" aria-label="Radar timeline slider">
       <button class="t-arr" id="tNext" aria-label="Next frame">›</button>
       <button class="playbtn" id="playBtn" aria-label="Play/pause animation">▶</button>
+      <button class="t-focus" id="nexradFocusBtn" title="Enable click-to-focus NEXRAD mode">🎯 NEXRAD Focus</button>
       <label class="quick-op">Opacity <input type="range" id="quickOpacity" min="20" max="100" value="75"></label>
     </div>
 
